Adds Auth test and starts on getting flow right
