# routes/api.php
@@ -16,16 +16,17 @@ use Illuminate\Support\Facades\Route;
 
 
 Route::group(['prefix' => 'v1', 'namespace' => 'App\Http\Controllers\Api\V1'], function () {
+    Route::post('/auth/signin', 'AuthController@signin');
     Route::get('/contacts', 'ContactController@index');
-    Route::post('/contacts', 'ContactController@store');
+    Route::post('/contacts', 'ContactController@store')->middleware(['auth:sanctum']);
     Route::get('/contacts/{contact-id}', 'ContactController@show')->name('contacts.show');
-    Route::put('/contacts/{contact-id}', 'ContactController@update');
-    Route::delete('/contacts/{contact}', 'ContactController@destroy');
+    Route::put('/contacts/{contact-id}', 'ContactController@update')->middleware(['auth:sanctum']);
+    Route::delete('/contacts/{contact-id}', 'ContactController@destroy')->middleware(['auth:sanctum']);
     Route::get('/shippers', 'ShipperController@index');
-    Route::post('/shippers', 'ShipperController@store');
+    Route::post('/shippers', 'ShipperController@store')->middleware(['auth:sanctum']);
     Route::get('/shippers/{shipper-id}', 'ShipperController@show')->name('shippers.show');
-    Route::put('/shippers/{shipper-id}', 'ShipperController@update');
-    Route::delete('/shippers/{shipper-id}', 'ShipperController@destroy');
+    Route::put('/shippers/{shipper-id}', 'ShipperController@update')->middleware(['auth:sanctum']);
+    Route::delete('/shippers/{shipper-id}', 'ShipperController@destroy')->middleware(['auth:sanctum']);
 });
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
